# rot-13-cli

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
rot_cli/: __main__.py  cli.py  core.py
tests/: test_cli.py  test_core_decrypt.py  test_core_encrypt.py
