[tool.poetry]
name = "rot-13-cli"
version = "0.1.0"
description = "CLI to encrypt and decrypt using 'Rotate by 13 Places' algorithm"
authors = ["Renan Morais <renan.ps.morais@gmail.com>"]
license = "gpl-3.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
