[tool.poetry]
name = "rot-cli"
version = "0.1.0"
description = "CLI to encrypt and decrypt using 'Rotate by N Places' algorithm"
authors = ["Renan Morais <renan.ps.morais@gmail.com>"]
license = "gpl-3.0"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
blue = "^0.9.1"
isort = "^5.10.1"
mkdocs = "^1.4.2"
prospector = "^1.7.7"
pytest-cov = "^4.0.0"
pytest-html = "^3.2.0"
safety = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rot = "rot_cli.__main__:cli"
